Empty Application start

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					'lifestyle'
 				],
 				apps: [
+					'com.metrological.app.Wiztivi',
 					'com.metrological.app.ButtonsTemplate',
 					'com.metrological.app.EmptyTemplate',
 					'com.metrological.app.ExtendTemplate',
