[ONEMUI-1] Create a super simon game
-Created a new app
-Gameplay in place, with 4 fixed devices
-Losing and restarting a game supported

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					'com.metrological.app.VASTTemplate',
 					'com.metrological.app.VideoTemplate',
 					'com.metrological.app.ViewHandlingTemplate',
-					'com.metrological.app.YoutubeTemplate'
+					'com.metrological.app.YoutubeTemplate',
+					'com.wiztivi.app.Simon'
 				]
 			};
 		</script>
