Update player helpers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					'lifestyle'
 				],
 				apps: [
-					'com.metrological.app.Wiztivi',
+					'com.wiztivi.app.appathon',
 					'com.metrological.app.ButtonsTemplate',
 					'com.metrological.app.EmptyTemplate',
 					'com.metrological.app.ExtendTemplate',
